# dmntk.atto.rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  Taskfile.yml  coverage.sh  manual_tests.sh
examples/: e1.dtb
src/: actions.rs  dev_utils.rs  editor.rs  errors.rs  keys.rs  main.rs  plane.rs  utils.rs
src/tests/: action_delete.rs  action_insert.rs  action_move.rs  mod.rs  model_plane.rs  model_row.rs  split_line.rs
