[package]
name = "dmntk-atto"
version = "0.0.4"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Decision table editor"
documentation = "https://docs.rs/dmntk-atto"
repository = "https://github.com/dmntk/dmntk.atto.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "atto"
path = "src/main.rs"

[dependencies]
ncurses = { version = "5.101.0", features = ["wide", "extended_colors"] }

[dev-dependencies]
difference = "2.0.0"